--- a/css/contacto.css
+++ b/css/contacto.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: #F8F6FA;
 }
 .contacto-title {
   font-size: 24px;
