--- a/css/banner.css
+++ b/css/banner.css
@@ -1,4 +1,4 @@
-.container {
+.main-container {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -43,13 +43,17 @@
   width: 288px;
 }
 
-.btn {
+.btn-container {
   width: 186px;
   height: 46px;
   border-radius: 8px;
   font-size: 16px;
   font-weight: 600;
   margin-top: 10px;
+  
+}
+.btn-container :hover{
+cursor: pointer;
 }
 
 .btn-yellow {
